--- a/talent_sync/src/components/header/Header.module.scss
+++ b/talent_sync/src/components/header/Header.module.scss
@@ -1,5 +1,120 @@
 @import '../../styles//index.scss';
 
 .header {
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 16px 32px;
+  height: 60px;
+  border-radius: 100px;
+  border: 1px solid var(--Gray-300, #d0d5dd);
+  background: var(--Gray-100, #f2f4f7);
+
+  &__logo {
+    display: flex;
+    gap: 10px;
+
+    &__text {
+      color: var(--Gray-900, #101828);
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+    }
+
+    &__dot {
+      color: var(--Blue-dark-400, #528bff);
+      font-family: Inter;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      margin-left: -8px;
+      margin-top: -4px;
+    }
+  }
+
+  &__links__desktop {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 32px;
+    gap: 20px;
+
+    @media (max-width: 830px) {
+      display: none;
+    }
+
+    &__content {
+      display: flex;
+      align-items: center;
+      gap: 3px;
+
+      &__text {
+        color: var(--Gray-500, #667085);
+        font-family: Inter;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 28px;
+        cursor: pointer;
+      }
+
+      &__img {
+        cursor: pointer;
+      }
+    }
+  }
+
+  &__actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+
+    @media (max-width: 830px) {
+      display: none;
+    }
+
+    &__talktosales {
+      display: flex;
+      padding: 5px 15px;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+      border-radius: 100px;
+      border: 1px solid var(--Gray-400, #98a2b3);
+      background: #fff;
+      font-size: 14px;
+
+      /* Shadow/xs */
+      box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+      @media (max-width: 930px) {
+        padding: 5px;
+        border-radius: 10px;
+      }
+    }
+
+    &__signup {
+      display: flex;
+      padding: 5px 15px;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+      border-radius: 100px;
+      background: var(--Blue-700, #175cd3);
+      border: none;
+
+      /* Shadow/xs */
+      box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+      color: var(--Base-White, #fff);
+      /* Text md/Semibold */
+      font-family: Inter;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 24px; /* 150% */
+    }
+  }
 }
