--- a/talent_sync/src/components/header/Header.module.scss
+++ b/talent_sync/src/components/header/Header.module.scss
@@ -95,6 +95,21 @@
         border-radius: 10px;
       }
     }
+    &__talktosales__mobile {
+      display: flex;
+      padding: 5px 15px;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+      border-radius: 100px;
+      border: 1px solid var(--Gray-400, #98a2b3);
+      background: #fff;
+      font-size: 14px;
+      width: 30%;
+
+      /* Shadow/xs */
+      box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+    }
 
     &__signup {
       display: flex;
@@ -115,6 +130,64 @@
       font-style: normal;
       font-weight: 600;
       line-height: 24px; /* 150% */
+    }
+
+    &__signup__mobile {
+      display: flex;
+      padding: 5px 15px;
+      justify-content: center;
+      align-items: center;
+      gap: 4px;
+      border-radius: 100px;
+      background: var(--Blue-700, #175cd3);
+      border: none;
+      width: 30%;
+
+      /* Shadow/xs */
+      box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+      color: var(--Base-White, #fff);
+      /* Text md/Semibold */
+      font-family: Inter;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 24px; /* 150% */
+    }
+  }
+
+  &__mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media (min-width: 830px) {
+      display: none;
+    }
+
+    &__nomenucontent {
+      display: none;
+    }
+
+    &__menucontent {
+      display: block;
+      position: absolute;
+      top: 11vh;
+      left: 0;
+      padding: 20px;
+      width: 100%;
+      height: 90vh;
+      background-size: cover;
+      background-position: center;
+      z-index: 100;
+
+      &__container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10%;
+      }
     }
   }
 }
