--- a/talent_sync/src/components/header/Header.module.scss
+++ b/talent_sync/src/components/header/Header.module.scss
@@ -54,7 +54,7 @@
       &__text {
         color: var(--Gray-500, #667085);
         font-family: Inter;
-        font-size: 14px;
+        font-size: 12px;
         font-style: normal;
         font-weight: 600;
         line-height: 28px;
@@ -86,7 +86,7 @@
       border-radius: 100px;
       border: 1px solid var(--Gray-400, #98a2b3);
       background: #fff;
-      font-size: 14px;
+      font-size: 12px;
 
       /* Shadow/xs */
       box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
@@ -126,7 +126,7 @@
       color: var(--Base-White, #fff);
       /* Text md/Semibold */
       font-family: Inter;
-      font-size: 14px;
+      font-size: 12px;
       font-style: normal;
       font-weight: 600;
       line-height: 24px; /* 150% */
@@ -162,6 +162,9 @@
 
     @media (min-width: 830px) {
       display: none;
+    }
+    &__container {
+      width: 90%;
     }
 
     &__nomenucontent {
