--- a/talent_sync/src/pages/home/Home.module.scss
+++ b/talent_sync/src/pages/home/Home.module.scss
@@ -1,5 +1,276 @@
 @import '../../styles/index.scss';
 
 .homepage {
-    
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  &__hero__section {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    gap: 20px;
+
+    @media (max-width: 900px) {
+      margin-top: 50px;
+    }
+    @media (min-width: 900px) {
+      margin-top: 100px;
+    }
+
+    @media (max-width: 763px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+
+    &__left {
+      display: flex;
+      flex-direction: column;
+
+      &__caption__desktop {
+        @media (max-width: 590px) {
+          display: none;
+        }
+        color: var(--Gray-800, #1d2939);
+        font-family: Inter;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 600;
+        // line-height: 72px; /* 112.5% */
+        // letter-spacing: -1.28px;
+        @media (max-width: 900px) {
+          font-size: 20px;
+        }
+      }
+
+      &__caption__mobile {
+        @media (min-width: 590px) {
+          display: none;
+        }
+        color: var(--Gray-800, #1d2939);
+        font-family: Inter;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+      }
+
+      &__caption__text {
+        color: var(--Gray-500, #667085);
+        font-family: Inter;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        margin-top: 10px;
+        @media (max-width: 900px) {
+          font-size: 12px;
+        }
+      }
+
+      &__discover {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-top: 40px;
+        &__trialbtn {
+          display: flex;
+          padding: 8px 17px;
+          justify-content: center;
+          align-items: center;
+          font-size: 13px;
+          color: white;
+          gap: 4px;
+
+          border-radius: 100px;
+          background: var(--Blue-700, #175cd3);
+          box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+          border: none;
+          @media (max-width: 590px) {
+            padding: 10px;
+          }
+        }
+        &__text {
+          color: var(--Blue-700, #175cd3);
+
+          /* Text lg/Semibold */
+          font-family: Inter;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 28px; /* 155.556% */
+        }
+      }
+
+      &__avatargroup {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-top: 40px;
+
+        &__rating__container {
+          display: flex;
+          flex-direction: column;
+          &__value {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            &__text {
+              color: var(--Gray-700, #344054);
+
+              /* Text md/Semibold */
+              font-family: Inter;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: 24px; /* 150% */
+              @media (max-width: 590px) {
+                font-size: 12px;
+              }
+            }
+            &__review {
+              color: var(--Gray-600, #475467);
+
+              /* Text md/Medium */
+              font-family: Inter;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 24px; /* 150% */
+              @media (max-width: 590px) {
+                font-size: 13px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &__right {
+      display: flex;
+      padding: 32px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      border-radius: 16px;
+      border: 1px solid var(--Blue-200, #b2ddff);
+      background: var(--Blue-50, #eff8ff);
+
+      /* Shadow/3xl */
+      box-shadow: 0px 32px 64px -12px rgba(16, 24, 40, 0.14);
+
+      &__top {
+        display: flex;
+        gap: 10px;
+        &__container1 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: var(--Orange-dark-300, #ff9c66);
+          border-radius: 8px;
+          width: 150px;
+          height: 150px;
+          @media (max-width: 983px) {
+            width: 100px;
+            height: 100px;
+          }
+        }
+        &__container2 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: var(--Primary-300, #d6bbfb);
+          border-radius: 8px;
+          width: 150px;
+          height: 150px;
+          @media (max-width: 983px) {
+            width: 100px;
+            height: 100px;
+          }
+        }
+        &__container3 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: var(--Moss-300, #acdc79);
+          border-radius: 8px;
+          width: 150px;
+          height: 150px;
+          @media (max-width: 983px) {
+            width: 100px;
+            height: 100px;
+          }
+        }
+      }
+
+      &__down {
+        display: flex;
+        gap: 10px;
+        &__container1 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: var(--Gray-300, #b3b8db);
+          border-radius: 8px;
+          width: 150px;
+          height: 150px;
+          @media (max-width: 983px) {
+            width: 100px;
+            height: 100px;
+          }
+        }
+        &__container2 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: var(--Warning-300, #fec84b);
+          border-radius: 8px;
+          width: 150px;
+          height: 150px;
+          @media (max-width: 983px) {
+            width: 100px;
+            height: 100px;
+          }
+        }
+        &__container3 {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: var(--Rose-300, #fea3b4);
+          border-radius: 8px;
+          width: 150px;
+          height: 150px;
+          @media (max-width: 983px) {
+            width: 100px;
+            height: 100px;
+          }
+        }
+      }
+
+      &__moreinfo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        &__item {
+          display: flex;
+          padding: 12px;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          border-radius: 100px;
+          border: 1px solid var(--Blue-100, #d1e9ff);
+          background: var(--Base-White, #fff);
+          cursor: pointer;
+
+          /* Shadow/xs */
+          box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+        }
+      }
+    }
+  }
 }
