--- a/talent_sync/src/components/chooseclearlink/ChooseClearLink.module.scss
+++ b/talent_sync/src/components/chooseclearlink/ChooseClearLink.module.scss
@@ -48,14 +48,14 @@
       flex-direction: column;
     }
     @media (min-width: 983px) {
-      gap: 250px;
+      gap: 200px;
     }
 
     &__left {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 40px;
-      width: 48%;
+      // width: 48%;
       @media (max-width: 983px) {
         width: 100%;
       }
@@ -65,7 +65,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 48%;
+      // width: 48%;
       @media (max-width: 983px) {
         width: 100%;
         margin-top: 30px;
