--- a/talent_sync/src/pages/home/Home.module.scss
+++ b/talent_sync/src/pages/home/Home.module.scss
@@ -173,6 +173,7 @@
           border-radius: 8px;
           width: 150px;
           height: 150px;
+          cursor: pointer;
           @media (max-width: 983px) {
             width: 100px;
             height: 100px;
@@ -186,6 +187,7 @@
           border-radius: 8px;
           width: 150px;
           height: 150px;
+          cursor: pointer;
           @media (max-width: 983px) {
             width: 100px;
             height: 100px;
@@ -199,6 +201,7 @@
           border-radius: 8px;
           width: 150px;
           height: 150px;
+          cursor: pointer;
           @media (max-width: 983px) {
             width: 100px;
             height: 100px;
@@ -217,6 +220,7 @@
           border-radius: 8px;
           width: 150px;
           height: 150px;
+          cursor: pointer;
           @media (max-width: 983px) {
             width: 100px;
             height: 100px;
@@ -230,6 +234,7 @@
           border-radius: 8px;
           width: 150px;
           height: 150px;
+          cursor: pointer;
           @media (max-width: 983px) {
             width: 100px;
             height: 100px;
@@ -243,6 +248,7 @@
           border-radius: 8px;
           width: 150px;
           height: 150px;
+          cursor: pointer;
           @media (max-width: 983px) {
             width: 100px;
             height: 100px;
