--- a/talent_sync/src/components/footer/Footer.module.scss
+++ b/talent_sync/src/components/footer/Footer.module.scss
@@ -1,5 +1,41 @@
 @import '../../styles/index.scss';
 
 .footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px 60px;
+  gap: 64px;
+
+  @media (max-width: 930px) {
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+//   align-self: stretch;
+  background: var(--Gray-50, #f9fafb);
+
+  &__copyright {
+    color: var(--Gray-500, #667085);
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
     
+  }
+
+  &__socials {
+    display: flex;
+    gap: 10px;
+
+    &__logo {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+  }
 }
