--- a/church_app/src/pages/home/Home.module.scss
+++ b/church_app/src/pages/home/Home.module.scss
@@ -9,12 +9,13 @@
       display: flex;
       justify-content: space-between;
       padding: 60px 20px;
-      height: 300px;
+      height: 400px;
     }
     @media (max-width: 560px) {
       display: flex;
       flex-direction: column;
       padding: 60px 20px;
+      gap: 30px;
     }
     &__left {
       display: flex;
@@ -68,6 +69,118 @@
           color: white;
         }
       }
+    }
+    &__right {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      @media (min-width: 560px) {
+        width: 48%;
+      }
+      @media (max-width: 560px) {
+        width: 100%;
+      }
+      &__img {
+        display: flex;
+        width: 300px;
+        height: 300px;
+      }
+    }
+  }
+  &__about__heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 60px auto 10px auto;
+    font-size: 20px;
+    color: black;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+  }
+  &__relevance {
+    @media (min-width: 560px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      margin: auto;
+      width: 600px;
+    
+      //   margin-top: 20px;
+    }
+    @media (max-width: 720px) {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
+      padding: 10px;
+      //   margin-top: 20px;
+    }
+    &__content {
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      border-bottom: 8px solid rgb(8, 8, 140);
+
+      &__about {
+        display: flex;
+        font-size: 17px;
+        color: black;
+        text-transform: uppercase;
+        margin-top: 10px;
+        font-weight: 600;
+      }
+
+      &__description {
+        display: flex;
+        font-size: 12px;
+        text-align: justify;
+        margin-top: 10px;
+      }
+    }
+  }
+  &__love__compassion {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 20px;
+  }
+  &__compassion__detail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: black;
+    margin: 30px auto 10px auto;
+    text-align: center;
+    width: 300px;
+  }
+
+  &__disciples__teaching {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin: 30px auto 20px auto;
+
+    &__img {
+        @media (min-width: 560px) {
+            width: 200px;
+            height: 200px;
+          }
+       
+        @media (max-width: 560px) {
+            width: 110px;
+            height: 110px;
+            border-radius: 8px;;
+          }
+       
     }
   }
 }
