--- a/church_app/src/pages/home/Home.module.scss
+++ b/church_app/src/pages/home/Home.module.scss
@@ -28,6 +28,7 @@
       }
       @media (max-width: 560px) {
         width: 100%;
+        height: 300px;
       }
       &__caption {
         display: flex;
@@ -38,10 +39,11 @@
       }
       &__description {
         display: flex;
-        font-size: 35px;
-        font-weight: 600;
+        font-size: 25px;
+        font-weight: 700;
         text-transform: uppercase;
         color: white;
+        text-align: center;
       }
 
       &__learnmore {
