--- a/church_app/src/components/signin/Signin.module.scss
+++ b/church_app/src/components/signin/Signin.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables.scss';
 
-.create__register {
+.create__signin {
   display: block;
   border-radius: $borderRadius;
   background-size: cover;
@@ -8,7 +8,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.register__form {
+.signin__form {
   display: flex;
   flex-direction: column;
   gap: 23px;
@@ -41,21 +41,13 @@
       }
     }
   }
-  &__firstname,
-  &__surname,
+
   &__email,
-  &__phone {
+  &__password {
     padding: 10px;
     border-radius: $borderRadius;
     border: none;
     font-size: 14px;
-  }
-
-  &__select {
-    display: flex;
-    padding: 10px;
-    border-radius: $borderRadius;
-    width: 100%;
   }
 
   &__registerBtn {
@@ -73,6 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
 
   }
 }
