--- a/church_app/src/components/footer/Footer.module.scss
+++ b/church_app/src/components/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/index.scss';
 
 .footer {
-  background: linear-gradient(to right, rgb(11, 2, 34), rgb(5, 0, 20));
+  background: teal;
   @media (max-width: 560px) {
     display: grid;
     grid-template-columns: 1fr 1fr;
