--- a/church_app/src/pages/home/Home.module.scss
+++ b/church_app/src/pages/home/Home.module.scss
@@ -52,11 +52,11 @@
         align-items: center;
         background: linear-gradient(
           to right,
-          rgb(224, 220, 234),
-          rgb(238, 242, 237)
+          rgb(15, 147, 154),
+          rgba(63, 136, 221, 1)
         );
         border-radius: 4px;
-        color: black;
+        color: white;
         font-weight: 600;
         border: none;
         padding: 5px 10px;
