--- a/church_app/src/pages/admin/Admin.module.scss
+++ b/church_app/src/pages/admin/Admin.module.scss
@@ -5,72 +5,17 @@
   flex-direction: column;
   width: 100%;
   &__heroSection {
-    @media (min-width: 560px) {
+    display: flex;
+    flex-direction: column;
+
+    &__info {
       display: flex;
-      justify-content: space-between;
-      padding: 60px 20px;
-      height: 500px;
-    }
-    @media (max-width: 560px) {
-      display: flex;
-      flex-direction: column;
-      padding: 60px 20px;
-      gap: 30px;
-    }
-    &__left {
-      display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 20px;
-      @media (min-width: 560px) {
-        width: 48%;
-      }
-      @media (max-width: 560px) {
-        width: 100%;
-        height: 400px;
-      }
-      &__caption {
-        display: flex;
-        font-size: 14px;
-        font-weight: 600;
-        text-transform: uppercase;
-        color: white;
-      }
-      &__description {
-        display: flex;
-        font-size: 25px;
-        font-weight: 700;
-        text-transform: uppercase;
-        color: white;
-        text-align: center;
-      }
-
-      &__learnmore {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: linear-gradient(
-          to right,
-          rgb(224, 220, 234),
-          rgb(238, 242, 237)
-        );
-        border-radius: 4px;
-        color: black;
-        font-weight: 600;
-        border: none;
-        padding: 5px 10px;
-        font-size: 14px;
-        width: 150px;
-        height: 50px;
-        cursor: pointer;
-        &:hover {
-          background: linear-gradient(to right, teal, rgb(76, 221, 63));
-          // font-weight: 600;
-          transition: left 0.3s ease-in-out;
-          color: white;
-        }
-      }
+      margin: 50px auto;
+      font-size: 20px;
+      font-weight: 600;
+      text-align: center;
     }
   }
 }
