--- a/church_app/src/components/allusers/Allusers.module.scss
+++ b/church_app/src/components/allusers/Allusers.module.scss
@@ -137,6 +137,14 @@
       transition: left 0.3s ease-in-out;
     }
   }
+
+  &__noRegistered__disciples {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
 
 .pagination {
